20071129 tests/{sp-2000.sna.gz,sp-ffff.sna.gz,test.c}: add tests for bugs
         #1841085 (SP not sanity checked when loading 48K .sna file) and
         #1841111 (compressed snapshots cause segfault).
20071129 libspectrum.c: check new_filename before checking *new_filename.
20071130 dll.c: fix typo and remove executable property (Stuart).
20071130 libspectrum.c: free *new_filename instead of new_filename (Stuart).
20071130 plusd.c: enable DISCiPLE/+D snapshot support and add support for 128K
	 DISCiPLE/+D snapshots (feature request #1764996) (Stuart).
20071130 internals.h,libspectrum.c,libspectrum.h.in,tap.c,tape.c: add support
	 for .spc, .sta and .ltp tape images (feature request #1764995)
	 (Stuart).
20071130 libspectrum.h.in: refer also to the DISCiPLE in comments (Stuart).
20071130 libspectrum.c,libspectrum.h.in,szx.c: add support for Pentagon 512
	 and 1024 snapshots.
20071130 szx.c: save the Pentagon 1024 secondary memory control port as well.
20071130 doc/libspectrum.{3,txt}: document .spc, .sta and .ltp support (Stuart).
20071201 szx.c: change to Pentagon 1024 secondary memory control port after
	 discussion with Jon Needle.
20071203 szx.c: also check if a +D custom ROM is supplied but not specified and
         make sure all variables passed to the +D custom ROM zlib decompression
         are initialised (Fred).
20071205 accessor.pl,snap_accessors.txt,snapshot.c,szx.c,z80.c: add support for
         Interface 1 in z80 and szx snapshots (Fred).
20071205 z80.c: fix writing joystick info to z80 snapshots (Fred).
20071205 szx.c: fix writing if1 info to szx snapshots (Fred).
20071218 ChangeLog,Makefile.am,README,configure.in,doc/libspectrum.{3,txt},
	 libspectrum.h.in,test/test.c: update for 0.4.0 release (Stuart).
20071219 szx.c: fix warning (Stuart).
20071219 libspectrum.c: avoid warnings when building without gcrypt (Stuart).
20071219 plusd.c: #include <string.h> (Stuart).
20071221 BRANCH: libspectrum_0_4_0-branch
20071221 TAG: libspectrum_0_4_0pre1