@@ -22,7 +22,7 @@
 .\" E-mail: philip-fuse@shadowmagic.org.uk
 .\"
 .\"
-.TH libspectrum 3 "18th December, 2007" "Version 0.4.0" "Emulators"
+.TH libspectrum 3 "5th January, 2008" "Version 0.4.0" "Emulators"
 .\"
 .\"------------------------------------------------------------------
 .\"
